--- a/_posts/2020-03-08-no-use.md
+++ b/_posts/2020-03-08-no-use.md
@@ -2,9 +2,10 @@
 layout: post
 title: Useless
 author: Chris Carter
+published: false
 ---
 
-You dwell in unapproachable light <br>
+You dwell in unapproachable brilliance <br>
 I cannot see You <br>
 
 <br>
@@ -20,6 +21,6 @@ I am overcome with dread <br>
 <br>
 
 When I behold You <br>
-I find no use for myself <br>
+I am worthless <br>
 You are that You are <br>
 Without me <br>
