trying a new style

--- a/_posts/2020-03-29-solitude.md
+++ b/_posts/2020-03-29-solitude.md
@@ -3,6 +3,7 @@ layout: post
 title: Solitude
 author: Chris Carter
 image: /assets/img/night_sky.jpg
+published: false
 ---
 
 You move beyond my eyes <br>
