--- a/_posts/articles/2020-02-20-law-of-man.md
+++ b/_posts/articles/2020-02-20-law-of-man.md
@@ -2,6 +2,7 @@
 layout: post
 title: The Law of Man
 author: Chris Carter
+categories: articles
 ---
 
 One of the peculiar facts about man is that he considers himself to be a distinct entity from the Natural World which he inhabits. In his own eyes, he is the Great Explorer of the Universe; he cannot tear his gaze away from its beauty and possibility, nor does he desire to make his hands rest from productivity and creativity. To cease exploration and work would be to cease a great deal of human activity. This is how the ancient Hebrews conceptualized death: in Sheol (the nether world), there is no activity, no work, no progress, no way to praise God. Life is characterized by activity; in death, there is no activity.
