--- a/_posts/blog/2020-07-16-strength.md
+++ b/_posts/blog/2020-07-16-strength.md
@@ -2,6 +2,7 @@
 layout: post
 title: Give Not Thy Strength To Women
 author: Chris Carter
+published: false
 ---
 
 The book of Proverbs, chapter 31, is cited often for its exposition of the qualities of an excellent wife: a woman who is trustworthy, kind, strong, industrious, entrepreneurial, skilled, upright, a master of her household, and God-fearing. The sentiment of her character is summarized in the final verse of the chapter by her husband who proclaims, "Many daughters have done nobly, but you excel them all." She is nothing short of remarkable; a prime example of the kind of woman a young man seeking to be married should look for.
@@ -10,7 +11,7 @@ Proverbs is a unique book in the Bible. It stands among two other Old Testament 
 
 How should we interpret this advice?
 
-Earlier in the book of Proverbs, we see that God has given different men different glory according to their stage in life. To old men He has given the glory of gray hair, that is, experience. Their whitening locks are an indication of an embroadened perspective on the whole of life and being. To young men He has given the glory of strength: a sharp mind which is diligent to formulate its aspirations, and a strong and capable body which is able to accomplish them. This is the design of God, that young men would be at the forefront of accomplishing His will and His purposes. Whether in business, industry, science, trade, ministry, or war, God has given young men strength of body and mind so that they may accomplish what He has intended on the Earth. 
+Earlier in the book of Proverbs, we see that God has given different men different glory according to their stage in life. To old men He has given the glory of gray hair, that is, experience. Their whitening locks are an indication of an embroadened perspective on the whole of life and being. To young men He has given the glory of strength: a sharp mind which is diligent to formulate its aspirations, and a strong and capable body which is able to accomplish them. This is the design of God, that young men would be at the forefront of accomplishing His will and His purposes. Whether in business, industry, science, trade, ministry, or war, God has given young men strength of body and mind so that they may accomplish what He has intended on the Earth.
 
 The "strength" which is mentioned in "do not give your strength to women" is the Hebrew _chayil_, used in the Bible to mean "strength", "might", "efficiency", "wealth", or "army". An overarching term may be "resources", or "energy"; that God-given strength which allows a young man to affect change in the world. The meaning, thus, is simple: do not give your time, your resources, or your energy to thinking about women. Do not use these things to pursue women. Do not let the prospect of romance with a woman impede you in accomplishing your God-given objectives. Seek a good woman to be your wife, but seek her as you would seek an opportunity, with open eyes and astute awareness, and not with a frantic or impatient sense of urgency. There is yet work for you to do, and you must attend to it as your first priority. When your assignment changes, and the nature of your work will require a woman to come alongside you as your partner to complete it, then God will bring her to your side.
 
