--- a/_posts/2020-05-23-parables.md
+++ b/_posts/2020-05-23-parables.md
@@ -3,7 +3,9 @@ layout: post
 title: Parables
 author: Chris Carter
 categories: blog
+tags: theology
 ---
+
 It is horribly cliche to say that we, as a species, are living in an age where too much of our lives are experienced through the abstraction provided for us by technological advancement, distracting us from what it really means to be human. I hate cliches, and I really hate being like everyone else, but let me say this: if we are driven "forward" by the engine of technological advancement, then we are moving towards something, and moving away from something else. I won't bother to say much more.
 
 
