--- a/_posts/2020-10-02-no-fear-2021.md
+++ b/_posts/2020-10-02-no-fear-2021.md
@@ -16,4 +16,4 @@ In the span of 10 months and 2 days, we have seen the outbreak of a novel asymme
 
 <p class="title is-5" style="margin: 0 0 0.5em">No Fear 2021</p>
 
-No matter who is in office or what kind of microchip Bill Gates puts in the COVID vaccine, the church has no reason to fear for the future. Our mission will not fail. Satan has been bound, and the nations of the world which were once held and controlled by him now belong to Christ, who beckons the Church to go forth and make disciples of all of them. We do not go and win the nations for Christ; they are already His. We do not need to pull together a political campaign in order to credential Jesus as someone the federal government would be wise to listen to; He is Lord of all, and His word is Law, and those who do not listen to Him are walking in open rebellion to His rule. There is no room for fear in the hearts of those who believe these things. Though we may win or lose some battles along the way, the war itself has already been won; while the next four years are uncertain to us, the next millennium lies within our influence.
+No matter who is in office or what kind of microchip Bill Gates puts in the COVID vaccine, the church has no reason to fear for the future. Our mission will not fail. Satan has been bound, and the nations of the world which were once held and controlled by him now belong to Christ, who beckons the Church to go forth and make disciples of all of them. We do not go and win the nations for Christ; they are already His. We do not need to pull together a political campaign in order to credential Jesus as someone the federal government would be wise to listen to; He is Lord of all, and His word is Law, and those who do not listen to Him are walking in open rebellion to His rule. There is no room for fear in the hearts of those who believe these things. Though we may win or lose some battles along the way, the war itself has already been won; while the next four years are uncertain to us, the next millennium will be influenced by the Church. 
