--- a/_posts/2020-10-06-optimism.md
+++ b/_posts/2020-10-06-optimism.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Suppose It's Not All Going to Burn Just Yet
+title: Suppose It's Not All Going to Come Crashing Down Just Yet
 author: Chris Carter
 ---
 
