--- a/_posts/2020-10-06-optimism.md
+++ b/_posts/2020-10-06-optimism.md
@@ -3,6 +3,7 @@ layout: post
 title: Suppose It's Not All Going to Come Crashing Down Just Yet
 author: Chris Carter
 image: /assets/img/city2.JPG
+published: false
 ---
 
 Suppose for a moment, as a thought experiment, that the popular American Evangelical pessimistic eschatology is wrong. In other words, suppose that it's not all going to get worse and worse until the Day of the Lord. Instead, take history in 500 year chunks, and suppose that each chunk shows a relative improvement in life on Earth, where "improvement" means more Christians, more Christian living, and more Christianization across the whole planet. Suppose that the work of the Church has just started, and isn't soon to end. Humor me.
