--- a/_posts/2020-10-14-pensees.md
+++ b/_posts/2020-10-14-pensees.md
@@ -12,6 +12,4 @@ In one fragment, he has discussed an entire claim and provided a proof of it wit
 
 Men should understand poetry as a tool of rhetoric. It has a place in the persuasion of the masses, the ventures of business, and the wooing of women. That said, men don't direct other men towards practical matters of conduct and character through poetry. At least, they ought not to. Men are glad to listen to other men when they are direct, clear, and unapologetic. Statements with these qualities signify urgency and importance to the listener, of course, but more importantly they signify _trust_. Trust, in that I, the speaker, _trust_ that you, the listener, are competent enough to either take my assertion or challenge it. Flowery and avoidant language signifies a mistrust in the listener, since it hedges for the possibility that he or she is irresponsible, offendable, or otherwise incompetent to handle a conversation about important matters.
 
-Modern evangelicalism has followed the world in becoming a culture known for a style of communication that is soft, indirect, and vague. As such, it is wholly unappealing to most manly men, who desire to be trusted with important matters, and serves only to attract men who habitually abdicate responsibility. This is why the Reformed tradition has been successful in bringing men through the doors of churches. Unlike our Catholic counterparts, our Charismatic associates in smoke-and-mirrors churches like Bethel and Hillsong, and our Methodist and Episcopalian friends whose denominations have long-since gone wacko, Reformed preachers preach unapologetically, directly, and with clarity. Being _trusted_ is the reason many men today joyfully walk in lockstep with the Reformed faith.
-
-Speak as Pascal wrote: directly, clearly, and with authority; you'll convey trust, and people will listen.
+Modern evangelicalism has followed the world in becoming a culture known for a style of communication that is soft, indirect, and vague. As such, it is wholly unappealing to most manly men, who desire to be trusted with important matters, and serves only to attract men who habitually abdicate responsibility. This is why the Reformed tradition has been successful in bringing men through the doors of churches. Unlike our Catholic counterparts, our Charismatic associates in smoke-and-mirrors churches like Bethel and Hillsong, and our Methodist and Episcopalian friends whose denominations have long-since gone wacko, Reformed preachers preach unapologetically, directly, and with clarity. Being _trusted_ is the reason many men today joyfully walk in lockstep with the Reformed faith; it's the true key to leadership, discipleship, and relationship.
