--- a/_posts/2020-10-14-pensees.md
+++ b/_posts/2020-10-14-pensees.md
@@ -1,12 +1,14 @@
 ---
 layout: post
-title: Adoration for the Pensees
+title: Adoration for the Pensées
 author: Chris Carter
 ---
 
-I love Blaise Pascal's _Pensees_. It's a collection of theological and philosophical meditations with the kind of succinctness, curtness, bite, and obduration to them that's wholly missing in most philosophy and almost all contemporary evangelicalism. Pascal  was a mathematician, a physicist, an inventor, and a theologian. He writes like all of those things. Mathematicians and physicists have a particular way of speaking that is simultaneously very succinct and very thorough. I, personally, find many philosophers and theologians to be too wordy; Pascal is a breath of fresh air. Consider this:
+_Author's note: I initially omitted the accent ague on the second "e" of Pensées. Obviously it is remedied now. Cheerio._
 
-_Vanity._ The cause and effect of love. Cleopatra. (_Pensees 46_)
+I love Blaise Pascal's _Pensées_. It's a collection of theological and philosophical meditations with the kind of succinctness, curtness, bite, and obduration to them that's wholly missing in most philosophy and almost all contemporary evangelicalism. Pascal  was a mathematician, a physicist, an inventor, and a theologian. He writes like all of those things. Mathematicians and physicists have a particular way of speaking that is simultaneously very succinct and very thorough. I, personally, find many philosophers and theologians to be too wordy; Pascal is a breath of fresh air. Consider this:
+
+_Vanity._ The cause and effect of love. Cleopatra. (_Pensées 46_)
 
 In one fragment, he has discussed an entire claim and provided a proof of it with a single word.
 
