--- a/_posts/2020-10-22-liberty.md
+++ b/_posts/2020-10-22-liberty.md
@@ -2,6 +2,7 @@
 layout: post
 title: The Perfect Law of Liberty
 author: Chris Carter
+published: false
 ---
 
 A Christian system of politics is founded upon the fact that 1) God created man to flourish for His own glory, and 2) sin hinders the flourishing of man. The first is a held as a matter of catechism and metaphysics; as a first principle to be found in Scripture, as a means of answering the nihilist who says that man was created for nothing. The existence and flourishing (or lack thereof) of the human race is inherently and inescapably meaningful for the sole and sufficient reason that every human being is created by God, for His own glory, as the image of God. Thus, when it comes to a discussion of politics, we are morally obligated and confined to enact policies which bolster human flourishing. On this point, Scripture is clear as well: sin hinders human flourishing. You could say that is what sin _is_, as a matter of definition: a deviance from the created order of things. God created the Universe and all that is within it to function a certain way, so that all of it, including all of humanity, functions together harmoniously. From this perspective, sin is a deviation from harmonious interaction with God, man, and creation. Our politics must reflect this.
@@ -38,4 +39,6 @@ _Act as free men, and do not use your freedom as a covering for evil, but use it
 
 Christ has liberated us for liberty. It is important that we be sure to make a semantic difference between liberty and freedom. Where freedom says "you may do as you please" either to your benefit or to your detriment, liberty says "you may do as is best" wholly for your benefit. Freedom allows all things, liberty allows all human flourishing. A fish is free to jump out of the water and onto the land, but it is not at liberty to do so; it is always to its detriment to leave the habitat it was designed for. By this, we are _free_ in Christ to sin in any manner we wish to, but we are not at _liberty_ to do so. When we sin, it is always to our detriment. Like the fish who was designed to live in the water, human beings were designed to live in liberty, the essence of which is harmonious co-existence with God, man, and creation.
 
-As American Christians, those who know the perfect law of liberty because of the Gospel of Jesus Christ, we ought to guard against the error of believing that Christian liberty is distinct from American liberty, or that Christian government is distinct from American government, or that Christian liberty is rightly limited by government tyranny. No, Christ is the King of all, seated at the right hand of power with all authority in Heaven and on Earth given to Him. His government is the only government, and His liberty is the only kind of liberty. Thus the church, as heirs of God, sons of God, and bearers of the word of God, functions as God's instrument to bring the whole world into conformity to Christ's perfect law of liberty. Just as evildoers are stricken with terror because government bears the sword, so also government should be stricken with terror because the church bears the word of God.  
+As American Christians, those who know the perfect law of liberty because of the Gospel of Jesus Christ, we ought to guard against the error of believing that Christian liberty is distinct from American liberty, or that Christian government is distinct from American government, or that Christian liberty is rightly limited by government tyranny. No, Christ is the King of all, seated at the right hand of power with all authority in Heaven and on Earth given to Him. His government is the only government, and His liberty is the only kind of liberty. Thus the church, as heirs of God, sons of God, and bearers of the word of God, functions as God's instrument to bring the whole world into conformity to Christ's perfect law of liberty. Just as evildoers are stricken with terror because government bears the sword, so also government should be stricken with terror because the church bears the word of God, as the church is Christ's agent on Earth for the purpose of restoring the world to Himself.
+
+Restoring what exactly?
