--- a/_posts/2020-10-22-liberty.md
+++ b/_posts/2020-10-22-liberty.md
@@ -39,6 +39,6 @@ _Act as free men, and do not use your freedom as a covering for evil, but use it
 
 Christ has liberated us for liberty. It is important that we be sure to make a semantic difference between liberty and freedom. Where freedom says "you may do as you please" either to your benefit or to your detriment, liberty says "you may do as is best" wholly for your benefit. Freedom allows all things, liberty allows all human flourishing. A fish is free to jump out of the water and onto the land, but it is not at liberty to do so; it is always to its detriment to leave the habitat it was designed for. By this, we are _free_ in Christ to sin in any manner we wish to, but we are not at _liberty_ to do so. When we sin, it is always to our detriment. Like the fish who was designed to live in the water, human beings were designed to live in liberty, the essence of which is harmonious co-existence with God, man, and creation.
 
-As American Christians, those who know the perfect law of liberty because of the Gospel of Jesus Christ, we ought to guard against the error of believing that Christian liberty is distinct from American liberty, or that Christian government is distinct from American government, or that Christian liberty is rightly limited by government tyranny. No, Christ is the King of all, seated at the right hand of power with all authority in Heaven and on Earth given to Him. His government is the only government, and His liberty is the only kind of liberty. Thus the church, as heirs of God, sons of God, and bearers of the word of God, functions as God's instrument to bring the whole world into conformity to Christ's perfect law of liberty. Just as evildoers are stricken with terror because government bears the sword, so also government should be stricken with terror because the church bears the word of God, as the church is Christ's agent on Earth for the purpose of restoring the world to Himself.
+As American Christians, those who know the perfect law of liberty because of the Gospel of Jesus Christ, we ought to guard against the error of believing that Christian liberty is distinct from American liberty, or that Christian government is distinct from American government, or that Christian liberty is rightly limited by government tyranny. No, Christ is the King of all, seated at the right hand of power with all authority in Heaven and on Earth given to Him. His government is the only government, and His liberty is the only kind of liberty. Thus the church, as heirs of God, sons of God, and bearers of the word of God, functions as God's instrument to bring the whole world into conformity to Christ's perfect law of liberty. Just as evildoers are stricken with terror because government bears the sword, so also government should be stricken with terror because the church bears the word of God. The church is Christ's agent on Earth for the purpose of restoring the world to Himself, in that His ultimate purpose for all things is the liberty which we enter into through believing the Gospel of Jesus.
 
-Restoring what exactly?
+Thus, the principles of what we call liberty are not arbitrary principles which have been pulled from thin air. Rather, they are fundamentally rooted in natural law and God's law, as those principles which would be consistent with the intended order of nature and mankind. When we understand this, our hand is forced, politically. If we are in Christ, it is our duty and mission to bring about the kind of liberty that God intends for all of creation. That means we vote a certain way, live a certain way, govern in a certain way, and obey or disobey government in a certain way, all for the glory of God. 
