--- a/_posts/2020-09-28-shoes.md
+++ b/_posts/2020-09-28-shoes.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Put Some Real Shoes On
+title: Put Some Real Shoes On | The Benedictine Diaries
 author: Chris Carter
 ---
 
