--- a/_posts/2020-11-02-no-plan-b.md
+++ b/_posts/2020-11-02-no-plan-b.md
@@ -14,6 +14,6 @@ Roughly, you can boil it all down to two things: that 1) Evangelicals are profou
 
 The second prong I have dealt with in previous writings, and individuals who are far more articulate and studied than me have addressed social justice for unbiblical falsehood that it is. Jeff Durbin gave a pointed sermon on it at the Fight Laugh Feast conference a few months ago that summed it up far better than I can here. So, let me attempt to kill the snake by cutting off its head, and dealing with the issue of _politics_ as perceived by Evangelicals.
 
-_Politics_, from the Greek _politiká_, is literally the "affairs of the cities". Politics is not just a column on CNN, or simply the affairs of Congress and the President and (increasingly) the Supreme Court, nor is it whatever Glenn Beck happens to be spouting off on in between ads on The Blaze Radio. Rather, if you are involved in human affairs, you are involved in politics, whether you like it or not. Yes, to remove yourself from human affairs in a manner of Transcendentalist and Thoreauvian escapist "cabin in the woods type dealeo" is to remove yourself from politics, but it is also to remove yourself from any ability to obey God by discipling the nations. If we care about following the command of our Lord and bringing the nations to obedience to Him, so that the affairs of the cities are performed in accordance with the Law of God, we must _by definition_ engage in politics. And further, if we want to be effective soldiers to this objective, we must be shrewd and strategic in our politics. This means voting for candidates whose platforms would prohibit behavior which is not in accord with God's Law, protect the right to gather to worship Jesus (even if there's a mild pandemic going on), protect the right to engage in public discourse where the Gospel may be preached in the marketplace without fear of persecution, and limit government to its God-given role of punishing evildoers.
+_Politics_, from the Greek _politiká_, is literally the "affairs of the cities". Politics is not just a column on CNN, or simply the affairs of Congress and the President and (increasingly) the Supreme Court, nor is it whatever Glenn Beck happens to be spouting off in between ads on The Blaze Radio, nor is it the kind of thing somebody plays when they suggest a policy decision to stop abortion. It is far more broad; if you are involved in human affairs, you are involved in politics, whether you like it or not. Yes, to remove yourself from all human affairs in a Thoreauvian escapist "cabin in the woods" type of way is to remove yourself from politics, but it is also to remove yourself from any ability to obey God by discipling the nations. If we care about following the command of our Lord and bringing the nations to obedience to Him, so that the affairs of the cities are performed in accordance with the Law of God, we must _by definition_ engage in politics. And further, if we want to be effective soldiers to this objective, we must be shrewd and strategic in our politics. Practically, in America, this means voting for candidates whose platforms would prohibit behavior which is not in accord with God's Law, protect the right to gather to worship Jesus (even if there's a mild pandemic going on), protect the right to engage in public discourse where the Gospel may be preached in the marketplace without fear of persecution, and limit government to its God-given role of punishing evildoers.
 
-Christians engaging in politics is not a complex issue, and it's certainly not as complex as most Evangelicals would lead you to believe. The whole of the issue may be summed up in this: be Biblical, be Holy, submit to God, and use your God-given influence to teach others to do the same. Roll up your sleeves, there's no Plan B.
+The whole of the matter may be summed up in this: be Biblical, be Holy, submit to God, roll up your sleeves, preach the Gospel, and teach your disciples obedience to Christ. #NoPlanB
