--- a/_posts/2020-10-31-reformed.md
+++ b/_posts/2020-10-31-reformed.md
@@ -6,7 +6,7 @@ author: Chris Carter
 
 Beginnings.
 
-It's 7pm on Saturday, October 31. I'm not much for parties, nor for Halloween. Parties just are difficult places to talk, and Halloween is a particularly ugly holiday that began historically as a day to remember the faithfully departed and has morphed into, at best, a day spent dressed in a silly costume, and at worst, a day spent reveling in evil and grotesqueness. I don't enjoy either of those activities very much. In their stead I'll probably just be spending some time with Chesterton or Pascal a little later tonight.
+It's 7pm on Saturday, October 31. I'm not much for parties, nor for Halloween. Parties just are difficult places to talk, and Halloween is a particularly ugly holiday. It began historically as a day to remember the faithfully departed and has morphed into, at best, a day spent dressed in a silly costume, and at worst, a day devoted to reveling in evil and grotesqueness. I don't enjoy either of those activities very much. In their stead I'll probably just be spending some time with Chesterton or Pascal a little later tonight.
 
 That said, this day happens to coincide with something which is actually worth celebrating: October 31, 1517 was the day of the nailing of the 95 Theses to the door of All Saints Church in Wittenberg, Germany, the day which historians regard as the beginning of the Protestant Reformation. This event is often depicted and spoken of with great mythological lore: an incensed and determined Luther authoritatively nailing the Theses to the door of the Church as an act of defiance against Rome and her teachings. In reality, this is a bit of dramatization. The Theses were a mere disputation of Rome's institution of plenary indulgences, which were a way to "buy time" out of purgatory. Nailing them to the door wasn't vandalism, it was common practice for professors who wanted to raise a disputation to do this. Luther was really just doing his job as a professor, saying, "hey, let's talk about these indulgences, this doesn't seem like good doctrine". A disputation wasn't really an outright declaration of a position the disputer was willing to die for; the nailing of the Theses to the door of the Wittenberg church wasn't the same as Luther marching into the public square with hammer in hand so he could scream "Faith alone! Booyah!" in the faces of the dignitaries of the Roman church ("faith alone" isn't even mentioned in the Theses implicitly). He most assuredly wasn't attempting to create a great upheaval or social reformation, much less another denomination of Christianity. It's likely that Luther hadn't even been converted at this point, and wouldn't have even believed in _sola fide_ ("faith alone") as a point of doctrine. Though it's debated among historians, Ligonier places Luther's conversion experience in the early months of 1519, a little under two years later. Luther reflects on this time studying later in his life, where the meaning of Romans 1:17 becomes plain to him:
 
