--- a/_posts/2020-11-02-no-plan-b.md
+++ b/_posts/2020-11-02-no-plan-b.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: There's No Plan B For Social Change | No Quarter November
+title: There's No Plan B | No Quarter November
 author: Chris Carter
 ---
 
