--- a/_posts/2020-09-28-shoes.md
+++ b/_posts/2020-09-28-shoes.md
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: Put Some Real Shoes On | The Benedictine Diaries
+title: Put Some Real Shoes On
 author: Chris Carter
+tags: [The Benedictine Diaries]
 ---
 
 For a while now, whenever I go out in the world, I wear a pair of dress shoes with my outfit. Often, jeans, paired with a tee shirt, a Henley, or a button down shirt, and dress shoes.
