--- a/_posts/2020-11-26-thankful.md
+++ b/_posts/2020-11-26-thankful.md
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: Thankful | No Quarter November
+title: Thankful
 author: Chris Carter
+tags: [No Quarter November]
 ---
 
 I don't like being cliché, unless there's good reason to be cliché. But, while we are all under house arrest on Thanksgiving, it's a good exercise to talk about things we ought to be thankful for.
