--- a/_posts/2020-12-11-letters.md
+++ b/_posts/2020-12-11-letters.md
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: Letters
+title: Coffee, Opposition, and International Relations
 author: Chris Carter
+tags: [Letters to the Editor]
 ---
 
 Jenna writes,
