--- a/_posts/2020-11-02-no-plan-b.md
+++ b/_posts/2020-11-02-no-plan-b.md
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: There's No Plan B | No Quarter November
+title: There's No Plan B
 author: Chris Carter
+tags: [No Quarter November]
 ---
 
 _And Jesus came up and spoke to them, saying, "All authority in heaven and on earth has been given to Me. Go, therefore, and make disciples of all the nations, baptizing them in the name of the Father and the Son and the Holy Spirit, teaching them to follow all that I commanded you; and behold, I am with you always, to the end of the age."_ (Matt 28:18-20)
