--- a/_posts/2020-11-30-utopia.md
+++ b/_posts/2020-11-30-utopia.md
@@ -2,6 +2,7 @@
 layout: post
 title: Utopia
 author: Chris Carter
+tags: [The Benedictine Diaries]
 ---
 
 A quick _pensé_ for you. I've got a bit of a headache, but I should write anyway.
