--- a/_posts/2020-11-26-thankful.md
+++ b/_posts/2020-11-26-thankful.md
@@ -3,6 +3,7 @@ layout: post
 title: Thankful
 author: Chris Carter
 tags: [No Quarter November]
+published: false
 ---
 
 I don't like being cliché, unless there's good reason to be cliché. But, while we are all under house arrest on Thanksgiving, it's a good exercise to talk about things we ought to be thankful for.
