--- a/_posts/2021-07-12-matthew-21.md
+++ b/_posts/2021-07-12-matthew-21.md
@@ -6,7 +6,7 @@ layout: post
 
 _And Jesus answered them, "Truly, I say to you, if you have faith and do not doubt, you will not only do what has been done to the fig tree, but even if you say to this mountain, ‘Be taken up and thrown into the sea,’ it will happen. And whatever you ask in prayer, you will receive, if you have faith."_ (Matthew 21:21-22)
 
-I have often interpreted this verse to be an exposition of the power of faith, an interpretation which is bester summarized in the Evangelical trope that "faith can move mountains". I don't think that's right anymore.
+I have often interpreted this verse to be an exposition of the power of faith, an interpretation which is better summarized in the Evangelical trope that "faith can move mountains". I don't think that's right anymore.
 
 The hermeneutical principle of "letting scripture interpret scripture" means that we should always approach interpreting a passage with great care to insure that our own presuppositions about the meaning of words and phrases doesn't cloud the true meaning of the text. I have previously written this about Jesus' words in Matthew 24, "you will see the Son of Man coming on the clouds of heaven", a verse which is often interpreted to mean the second coming of Christ, but which is actually a quotation from the book of Daniel referring to the ascension of Christ. The wrong interpretation stems from Dispensationalism, a system which promotes an interpretation that appears to be the plain and literal meaning of the passage which has been embedded into other aspects of Christian culture and language. American Evangelicals have sang and preached about our Lord's "coming on the clouds" in this way for so long that we automatically associate it with the second coming, even though that is the furthest thing from its meaning according to Jesus and Daniel.
 
